deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-deployment
  labels:
    name: v1
spec:
  replicas: 3
  selector:
    matchLabels:
      name: v1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        name: v1
    spec:
      containers:
      - name: finance-container
        image: adityavaste/finance:latest
        imagePullPolicy: Always
        ports:
        - name: my-name
          containerPort: 3000
        resources:
          requests:
            cpu: "20m"
            memory: "55Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 10
