service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finance-service
spec:
  type: NodePort
  selector:
    name: v1
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    nodePort: 30080
