ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finance-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/subnets: subnet-0df7776bf5c02c683,subnet-04ba702d0f3a29eaf
    
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finance-service
                port:
                  name: http
